part1/1.13/manifests/todo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      nodeSelector:
        project: todo
      volumes:
        - name: todo-images
          persistentVolumeClaim:
            claimName: todo-pvc
      containers:
        - name: todo-app
          image: pedrocoelhodr/todo-app:1.6
          volumeMounts:
            - name: todo-images
              mountPath: /usr/src/app/data
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
